[tool.poetry]
name = "LumoKit"
version = "1.1.0"
description = "Solana's most powerful AI toolkit framework"
authors = ["Lumo Labs <labslumo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
python-jose = "^3.3.0"
psycopg = "^3.2.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
pandas = "^2.2.2"
httpx = "^0.27.2"
pydantic = "^2.9.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.34"
fastapi-sso = "^0.15.0"
passlib = "^1.7.4"
requests = "^2.32.3"
pytz = "^2024.2"
aiohttp = "^3.10.5"
asyncio = "^3.4.3"
aiosmtplib = "^3.0.2"
aiofiles = "^24.1.0"
opencv-python-headless = "^4.10.0.84"
pillow = "^10.4.0"
aioboto3 = "^13.1.1"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
openai = "^1.51.2"
langchain-openai = "^0.2.2"
pgvector = "^0.3.5"
alembic = "^1.13.3"
tweepy = "^4.14.0"
apscheduler = "^3.10.4"
filelock = "^3.16.1"
beautifulsoup4 = "^4.12.3"
llama-index = "^0.11.23"
tiktoken = "^0.7.0"
langchain-google-genai = "^2.0.5"
langchain-anthropic = "^0.3.0"
python-telegram-bot = "^21.7"
solana = "^0.35.1"
gql = "^3.5.0"
ujson = "^5.10.0"
base58 = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"
pre-commit = "^4.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"